        - Remove unnecessary branch in recursive call
        - Support inline-structures parameter

1.00 2021-02-18 Release
        - -s option added that uses sentence boundaries provided by the KorAP tokenizer (-tk)
        - Tokenizer invocation comments removed from KorAP XML output
        - Indentation of </span> tags fixed
        - Character entities used in DeReKo are automatically replaced by their corresponding characters
        - Resources defined in Makefile
        - Fixed possible IO deadlock with KorAP tokenizer
        - Simplified debugging by combining with X::C::T line numbers
        - Support inline-tokens parameter
        - Move verbose code documentation to trailing
          script section

0.03 2021-01-12
        - Update KorAP-Tokenizer to released 2.0 version
        - Improve test suite for recent version
          of Mojolicious.

0.02 2020-11-27
        - Update KorAP-Tokenizer to v2.0.0.
        - Switch input encoding based on XML
          processing instruction.
        - Fix handling of UTF-8 in sigles.

0.01 2020-09-28
        - Initial release to GitHub.